[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamafreeapi"
version = "0.1.3"
authors = [
    {name = "Mohammed Foud", email = "mfoud444@gmail.com"},
]
description = "A lightweight client for interacting with LLMs served via Ollama"
readme = "README.md"
requires-python = ">=3.8,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ollama>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/mfoud444/ollamafreeapi"
"Bug Tracker" = "https://github.com/mfoud444/ollamafreeapi/issues"
